Update and rename 8-colors-tested.html to browserPaint.html

--- a/browserPaint.html
+++ b/browserPaint.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Problem 8 - Color</title>
+<title>Andy's Paint with Canvas!</title>
 </head>
 <body>
 <h1>Basic Paint Program!</h1>
