--- a/browserPaint.html
+++ b/browserPaint.html
@@ -18,6 +18,6 @@ Choose Brush Color: <input class="color" value="ffffff" id="colorChoice" onchang
 	 Epic Fail Messages (Canvas)!!!
  </canvas>
 <script src="jscolor.js"></script>
-<script src="8-colors-tested.js"></script>
+<script src="browserPaint.js"></script>
 </body>
 </html>
