--- a/browserPaint.html
+++ b/browserPaint.html
@@ -14,6 +14,11 @@ Choose Brush Color: <input class="color" value="ffffff" id="colorChoice" onchang
 <button id="squareBrush" type="button">Square Brush</button>
 <button id="circleBrush" type="button">Circular Brush</button>
 <button id="eraser" type="button">Eraser</button>
+<button id="textBox" type="button">Text Box</button>
+<button id="increase" type="button">Increase Size</button>
+<button id="decrease" type="button">Decrease Box</button>
+<button id="fillButton" type="button">Fill Color</button>
+
  <canvas id="canvas" width="1000" height="1000" style ="border:1px solid #c3c3c3;">
 	 Epic Fail Messages (Canvas)!!!
  </canvas>
