--- a/browserPaint.html
+++ b/browserPaint.html
@@ -23,6 +23,12 @@ Choose Brush Color: <input class="color" value="ffffff" id="colorChoice" onchang
 	 Epic Fail Messages (Canvas)!!!
  </canvas>
 <script src="jscolor.js"></script>
+<script
+        src="https://code.jquery.com/jquery-2.2.3.min.js"
+        integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
+        crossorigin="anonymous"></script>
+
+<script src="jqueryColor.js"></script>>
 <script src="browserPaint.js"></script>
 </body>
 </html>
