--- a/browserPaint.html
+++ b/browserPaint.html
@@ -18,6 +18,8 @@ Choose Brush Color: <input class="color" value="ffffff" id="colorChoice" onchang
 <button id="increase" type="button">Increase Size</button>
 <button id="decrease" type="button">Decrease Box</button>
 <button id="fillButton" type="button">Fill Color</button>
+<button id="save" type="button">Save</button>
+<button id="restore" type="button">Restore</button>
 
  <canvas id="canvas" width="1000" height="1000" style ="border:1px solid #c3c3c3;">
 	 Epic Fail Messages (Canvas)!!!
