--- a/browserPaint.html
+++ b/browserPaint.html
@@ -30,7 +30,8 @@ Choose Brush Color: <input class="color" value="ffffff" id="colorChoice" onchang
         integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
         crossorigin="anonymous"></script>
 
-<script src="jqueryColor.js"></script>>
+<script src="jqueryColor.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="browserPaint.js"></script>
 </body>
 </html>
