--- a/bootStrap.html
+++ b/bootStrap.html
@@ -101,6 +101,7 @@
             <button id="circleBrush" type="button">Circular Brush</button>
             <button id="eraser" type="button">Eraser</button>
             <button id="textBox" type="button">Text Box</button>
+            <button id="drawBox" type="button">Draw Square / Rectangle</button>
             <button id="increase" type="button">Increase Size</button>
             <button id="decrease" type="button">Decrease Box</button>
             <button id="fillButton" type="button">Fill Color</button>
